Implemented user profile in the dashboard (UI + Backend) with view user info functionality; edit feature is pending. Enhanced Manage Campaign module by designing a proper UI layout for the campaign creation form. Added Pending Creator Requests view and applied proper CSS to the Edit Campaign view. Fixed a bug in the SaveCampaigns page related to the AddOrEdit action method.

--- a/Crowd_Funding_Platform/Views/Shared/_Layout.cshtml
+++ b/Crowd_Funding_Platform/Views/Shared/_Layout.cshtml
@@ -47,12 +47,15 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
+    @* 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.rawgit.com/jzaefferer/jquery-validation/1.19.3/dist/jquery.validate.min.js"></script>
+    <script src="https://cdn.rawgit.com/jzaefferer/jquery-validation/1.19.3/dist/jquery.validate.min.js"></script> *@
 
 
 
