--- a/Crowd_Funding_Platform/Views/Shared/_dashboardLayout.cshtml
+++ b/Crowd_Funding_Platform/Views/Shared/_dashboardLayout.cshtml
@@ -1,4 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
+@{
+    var userId = HttpContextAccessor.HttpContext?.Session.GetInt32("UserId");
+    var userName = HttpContextAccessor.HttpContext?.Session.GetString("UserName");
+    var userImage = HttpContextAccessor.HttpContext?.Session.GetString("UserImage");
+
+    Console.WriteLine("Profile"+userImage);
+}
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -33,10 +44,14 @@
     <link rel="stylesheet" href="~/DashboardAssets/css/style.css">
     <!-- End layout styles -->
     @* <link rel="shortcut icon" href="~/DashboardAssets/images/favicon.png" /> *@
-    <title>VistoWise</title>
+    <title>FundHive</title>
+
+   
+
     <style>
         body {
-            background-color: #E3F2FD; /* Light blue background */
+           /*  background-color: #E3F2FD; /* Light blue background */ */
+            background-color: #ffdee1 !important;
         }
 
         .sidebar {
@@ -65,15 +80,15 @@
         .content-wrapper {
             background-color: #E3F2FD !important;
         }
-    </style>
+    </style> 
 </head>
 <body>
 
     <div class="container-scroller">
-        <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+        <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row" style="font-family: 'Material Design Icons';">
             <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
-                <a class="navbar-brand brand-logo" href="index.html">VistoWise</a>
-                <a class="navbar-brand brand-logo-mini" href="index.html"><img src="~/DashboardAssets/images/logo-mini.svg" alt="logo" /></a>
+                <a class="navbar-brand brand-logo" href="index.html">FundHive</a>
+                <a class="navbar-brand brand-logo-mini" href="/Dashboard/Dashboard"><img src="~/DashboardAssets/images/logo-mini.svg" alt="logo" /></a>
             </div>
 
             <div class="navbar-menu-wrapper d-flex align-items-stretch">
@@ -94,16 +109,17 @@
                     <li class="nav-item nav-profile dropdown">
                         <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
                             <div class="nav-profile-img">
-                                <img src="~/DashboardAssets/images/faces/face1.jpg" alt="image">
-                                <span class="availability-status online"></span>
+                                <img src="@userImage" alt="User Image" class="rounded-circle" width="40" height="40">
                             </div>
                             <div class="nav-profile-text">
-                                <p class="mb-1 text-black">David Greymaax</p>
+                                <span class="ml-2">@userName</span>
                             </div>
                         </a>
                         <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
-                            <a class="dropdown-item" href="#">
-                                <i class="mdi mdi-cached me-2 text-success"></i> Activity Log
+                            
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/Profile/Profile">
+                                <i class="fas fa-user me-2 text-success"></i> My Profile
                             </a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">
@@ -222,7 +238,7 @@
         </nav>
 
         <div class="container-fluid page-body-wrapper">
-            <nav class="sidebar sidebar-offcanvas" id="sidebar">
+            <nav class="sidebar sidebar-offcanvas" id="sidebar" style="font-family: 'Material Design Icons';">
                 
 
                 <ul class="nav">
@@ -290,7 +306,7 @@
                 <div class="content-wrapper">
                     @RenderBody()
                 </div>
-                <footer class="footer">
+                <footer class="footer" style="font-family: 'Material Design Icons';">
                     <div class="d-sm-flex justify-content-center justify-content-sm-between">
                         <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2023 <a href="https://www.bootstrapdash.com/" target="_blank">BootstrapDash</a>. All rights reserved.</span>
                         <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="mdi mdi-heart text-danger"></i></span>
@@ -301,72 +317,42 @@
     </div>
 
 
-    <!-- jQuery (Ensure it's before Bootstrap JS) -->
-    <script src="~/js/main.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
- 
-    @await RenderSectionAsync("Scripts", required: false)
+    <!-- ✅ Load jQuery First -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.rawgit.com/jzaefferer/jquery-validation/1.19.3/dist/jquery.validate.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
 
-    <!-- Bootstrap JS -->
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- ✅ Load jQuery Validation -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
 
-    <!-- Vendor JS Files -->
-    <script src="~/DashboardAssets/vendors/js/vendor.bundle.base.js"></script>
+    <!-- ✅ Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JS Files -->
+    <!-- ✅ Load Other Plugins -->
+    @* <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
     <script src="~/DashboardAssets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <script src="~/DashboardAssets/vendors/chart.js/chart.umd.js"></script>
 
-    <!-- Validation & Additional Libraries -->
-    @*  <script src="https://cdn.rawgit.com/jzaefferer/jquery-validation/1.19.3/dist/jquery.validate.min.js"></script> *@
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
+    <!-- ✅ Load Vendor JS Files -->
+    <script src="~/DashboardAssets/vendors/js/vendor.bundle.base.js"></script> *@
 
-    <!-- Custom JS -->
-    @*     <script src="~/DashboardAssets/js/main.js"></script>
-    *@
+    <!-- ✅ Load Custom JS Files (After All Dependencies) -->
+    @* <script src="~/js/main.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/SaveCampaignForm.js"></script> <!-- This should be at the end -->
     <script src="~/DashboardAssets/js/off-canvas.js"></script>
     <script src="~/DashboardAssets/js/misc.js"></script>
     <script src="~/DashboardAssets/js/settings.js"></script>
     <script src="~/DashboardAssets/js/todolist.js"></script>
-    <script src="~/DashboardAssets/js/jquery.cookie.js"></script>
-    @*  <script src="~/DashboardAssets/js/dashboard.js"></script> *@
+    <script src="~/DashboardAssets/js/jquery.cookie.js"></script> *@
+    @await RenderSectionAsync("Scripts", required: false)
 
-    <!-- Site JS -->
-    @* <script src="~/js/site.js" asp-append-version="true"></script>
-    *@
-    <!-- jQuery Check -->
+    <!-- ✅ Debugging Script -->
     <script>
         $(document).ready(function () {
-            console.log("jQuery is working!");
+            console.log("jQuery and all scripts loaded properly!");
+            
+            
         });
     </script>
 
-
-
-    @*
-    <script>
-    $(document).ready(function () {
-    // Sidebar Toggle
-    $(".expand_sidebar").click(function () {
-    $(".sidebar").removeClass("collapsed");
-    });
-
-    $(".collapse_sidebar").click(function () {
-    $(".sidebar").addClass("collapsed");
-    });
-
-    // Submenu Toggle
-    $(".arrow-icon").click(function () {
-    let targetId = $(this).data("target");
-    $("#" + targetId).slideToggle();
-    $(this).toggleClass("rotated");
-    });
-    });
-    </script> *@
 </body>
 </html>
