--- a/Crowd_Funding_Platform/Views/Account/ResetPassword.cshtml
+++ b/Crowd_Funding_Platform/Views/Account/ResetPassword.cshtml
@@ -33,5 +33,9 @@
 </form>
 
 @section Scripts {
-    <script src="/js/Login.js"></script>
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script src="~/js/Login.js"></script>
+
 }
