--- a/Crowd_Funding_Platform/Views/ManageCampaigns/CampaignsList.cshtml
+++ b/Crowd_Funding_Platform/Views/ManageCampaigns/CampaignsList.cshtml
@@ -8,7 +8,7 @@
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2 class="text-primary">Campaigns List</h2>
-        <a asp-action="Create" class="btn btn-success"><i class="fas fa-plus-circle"></i> Create New</a>
+        <a asp-action="SaveCampaigns" class="btn btn-success"><i class="fas fa-plus-circle"></i> Create New</a>
     </div>
 
     <div class="table-responsive rounded shadow-sm bg-white p-3">
